src/objects/Negotiation_Price__c.object
<CustomObject>
    <fields>
        <fullName>Final_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Date__c</fullName>
        <label>Quote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Price__c</fullName>
        <label>Quote Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <referenceTo>Technology__c</referenceTo>
        <relationshipLabel>Negotiation Prices</relationshipLabel>
        <relationshipName>Negotiation_Prices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Negotiation Price</label>
    <nameField>
        <displayFormat>PR-{0000000000}</displayFormat>
        <label>Negotiation Prices Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Negotiation Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>